src/main/java/com/example/Rental/Errors/DateRangeException.java
package com.example.Rental.Errors;

public class DateRangeException extends RuntimeException {
    public DateRangeException() {
        super("Invalid date range provided.");
    }
}
